# Fast_API

./: employee_data.csv  pyproject.toml
src/fast_api/: db_connect.py  errorhandling.py  form_data.py  formdata.py  in_depth  in_depth.py  main.py  syntax.tldr
src/fast_api/app_basic_curd/: curd.py  curd_without_db.py
src/fast_api/app_curd/: curd.py  database.py  main.py  model.py  schema.py
src/fast_api/app_db/: database.py  generate_employee_data.py  info.txt  main.py
src/fast_api/conn_postgres/: hello_api.py
src/fast_api/postgres_curd/: curd_postgres.py
