[project]
name = "fast-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Muzamilshah11", email = "muzamils782@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn>=0.34.0",
]

[project.scripts]
fast-api = "fast_api:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
